fixed navbar text alignment

--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -53,6 +53,7 @@
     font-family: "Exo 2", sans-serif;
     display: inline-block;
     vertical-align: middle;
+    padding-bottom: 2px;
 }
 
 .navbar-user {
@@ -99,6 +100,7 @@
     vertical-align: middle;
     margin: 10px;
     margin-right: 5px;
+    padding-bottom: 2px;
 }
 
 .navbar-profile:hover {
